# kudo

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
controller/: .gitignore  Cargo.toml
controller/lib/: Cargo.toml
controller/lib/src/: lib.rs
controller/lib/src/etcd/: mod.rs
controller/lib/src/external_api/: interface.rs  mod.rs
controller/lib/src/external_api/generic/: filter.rs  mod.rs  model.rs
controller/lib/src/external_api/instance/: controller.rs  filter.rs  mod.rs  model.rs  service.rs
controller/lib/src/external_api/namespace/: controller.rs  model.rs  service.rs
controller/lib/src/external_api/node/: controller.rs  model.rs  service.rs
controller/lib/src/external_api/workload/: controller.rs  filter.rs  mod.rs  model.rs  service.rs
controller/lib/src/grpc_client/: interface.rs
controller/lib/src/internal_api/: interface.rs  mod.rs
controller/lib/src/internal_api/node/: controller.rs  mod.rs  model.rs  service.rs
controller/src/: config.rs  main.rs
docs/proposal/controller/: README.md  external-api.yml  internal-api.proto
docs/proposals/: agent.proto  cli-configuration.md  cli-convention.md  cli.md  networking.proto  resource.md  workload.md
docs/proposals/controller/: README.md  internal-api.proto
docs/proposals/network/: README.md  api.proto
docs/proposals/scheduler/: README.md  scheduler.proto
kudoctl/: Cargo.toml
kudoctl/src/: config.rs  logger.rs  main.rs  request.rs
kudoctl/src/client/: instance.rs  mod.rs  namespace.rs  node.rs  request.rs  types.rs  workload.rs
kudoctl/src/resource/: mod.rs  parse.rs  workload.rs
kudoctl/src/subcommands/: apply.rs  mod.rs
kudoctl/src/subcommands/delete/: instance.rs  mod.rs  namespace.rs  resource.rs
kudoctl/src/subcommands/get/: instance.rs  instances.rs  mod.rs  namespaces.rs  node.rs  nodes.rs  output.rs  resource.rs  resources.rs
network/: Cargo.toml
network/src/: lib.rs
network/src/error/: mod.rs
network/src/instance/: mod.rs  request.rs  response.rs
network/src/node/: mod.rs  request.rs  response.rs
network/src/node_ip/: mod.rs
network/src/port/: mod.rs
network/src/utils/: mod.rs
node-agent/: Cargo.toml
node-agent/node-manager-lib/: Cargo.toml
node-agent/node_manager/: Cargo.toml
node-agent/node_manager/src/: lib.rs
node-agent/node_manager_lib/: Cargo.toml
node-agent/src/: config.rs  main.rs
node-agent/workload-manager-lib/: Cargo.toml
node-agent/workload_manager/: Cargo.toml
node-agent/workload_manager/src/: lib.rs
node-agent/workload_manager/src/workload_manager/: error.rs  mod.rs
node-agent/workload_manager/src/workload_manager/workload/: container.rs  mod.rs  workload_runner.rs  workload_trait.rs
node-agent/workload_manager/src/workload_manager/workload_listener/: container_listener.rs  error.rs  mod.rs  workload_listener.rs
node-agent/workload_manager_lib/: Cargo.toml
node-agent/workload_manager_lib/src/workload_manager/workload_listener/: container_listener.rs  error.rs  workload_listener.rs
proto/: Cargo.toml  build.rs
proto/src/: agent.proto  controller.proto  lib.rs  network.proto  scheduler.proto
scheduler/: Cargo.toml
scheduler/src/: config.rs  instance.rs  instance_listener.rs  lib.rs  main.rs  manager.rs  node.rs  node_listener.rs  orchestrator.rs  parser.rs  storage.rs
scheduler/src/event/: mod.rs
scheduler/src/event/handlers/: instance_create.rs  instance_destroy.rs  instance_stop.rs  instance_stream_crash.rs  instance_terminated.rs  mod.rs  node_register.rs  node_status.rs  node_stream_crash.rs  node_unregister.rs
scheduler/src/instance/: listener.rs  mod.rs  scheduled.rs
scheduler/src/node/: listener.rs  mod.rs  registered.rs
scheduler/src/parser/: instance.rs  mod.rs  port.rs  resource.rs  status.rs
