[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
controller_lib = { path = "./lib" }
tokio = { version = "1.20.0", features = ["macros"] }
env_logger = "0.6.0"
confy = "0.4.0"
serde = { version = "1.0.139", features = ["derive"] }
log = "0.4.0"