[package]
name = "kudoctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
clap = "3.2.8"
tokio = { version = "1.20.0", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.0"
