[package]
name = "kudoctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
clap = { version = "3.2.12", features = ["derive"] }
tokio = { version = "1.20.0", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.4"
serde_json = "1.0"
chrono = "0.4.19"
dirs = "4.0.0"
anyhow = "1.0.62"
url = "2.2.2"