[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "../proto" }
log = "0.4.0"
env_logger = "0.8.4"
tonic = "0.7.2"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tokio-stream = { version = "0.1", features = ["net"] }
serde = "1.0.142"
serde_derive = "1.0.142"
confy = "0.4.0"
anyhow = "1.0.62"
thiserror = "1.0.32"
async-stream = "0.3.3"
uuid = { version="1.1.2", features = ["v4"] }
