[package]
name = "controller_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etcd-client = "0.9.2"
actix-web = "4.1.0"
serde = { version = "1.0.139", features = ["derive"] }
tonic = "0.7.2"
proto = { path = "../../proto" }
log = "0.4.0"
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0.29"
rand = "0.8.5"
serde_json = "1.0"
