[package]
name = "workload_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "../../proto" }
tonic = "0.7"
bollard = "0.13"
futures-util = "0.3"
futures = "0.3"
tokio = { version= "1", features = ["full"]}
anyhow = "1.0"
sysinfo = "0.25.3"

[dev-dependencies]
tokio-test = "*"